Update Docker-Agent Kotlin version to 1.4.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,21 @@
 Thumbs.db
 .DS_Store
 .gradle
-build/
-target/
-out/
 .idea
-*.iml
-*.ipr
-*.iws
+
 .project
 .settings
 .classpath
-config/application.yml
+
+*.iml
+*.ipr
+*.iws
+
+build/
+!build/libs
+
+target/
+out/
+
+config/
 !config/templates
