Fix docker-agent Broken Build??

--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ compileTestKotlin {
     }
 }
 kapt {
+    correctErrorTypes = true
     arguments {
         arg("micronaut.processing.incremental", true)
         arg("micronaut.processing.annotations", "com.ilunos.agent.docker.*")
