--- a/src/main/resources/templates/application.yml
+++ b/src/main/resources/templates/application.yml
@@ -132,10 +132,11 @@ agent:
     pem-directory:
 
   orchestrator:
+    enabled: false
 
   # Base Url of the Orchestrator, The orchestrator needs to live somewhere from where it can reach the agent
-  # url: http://localhost:8080
+  url: http://localhost:8080
 
   # Set to the value of micronaut.security.register-token from your orchestrator configuration
   # !If token is not being used remove or leave commented out!
-  # token: my-super-secure-registration-password
+  token: my-super-secure-registration-password
